[package]
name = "persuit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name="persuit"
crate-type = ["cdylib"]

[dependencies]
bit-set = "0.5.3"
bitvec = "1.0.1"
crossbeam-channel = "0.5.6"
crossbeam-utils = "0.8.18"
flume = "0.10.14"
parking_lot = { version = "0.12.1", features = ["send_guard"] }
pyo3 = { version = "0.17.3", features = ["extension-module"]}
